--- a/react-app/src/components/CompletedSentenceCard.css
+++ b/react-app/src/components/CompletedSentenceCard.css
@@ -9,7 +9,7 @@
     margin-bottom: 8px;
   }
   
-  .label {
+  .label-fin {
     font-weight: bold;
     color: #4a5568;
   }
@@ -20,18 +20,33 @@
     font-style: italic;
   }
   
-  .evaluation {
-    margin-top: 12px;
+  .evaluation-fin {
+    margin-top: 0px;
   }
   
-  .review-text,
-  .terms-used {
-    background-color: #e5e7eb;
-    padding: 8px;
+  .review-text-fin,
+  .terms-used-fin {
+    background-color: #f3f4f6;
+    padding: 0px 8px 8px 8px;
     border-radius: 4px;
   }
   
-  .error {
+  .error-fin {
     color: #ef4444;
     font-weight: bold;
+  }
+
+  .terms-used-fin {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  
+  .terms-used-fin li {
+    margin-bottom: 5px;
+  }
+
+  .review-text-fin {
+    margin-top: 0px;
   }
