--- a/react-app/src/components/RatingBar.css
+++ b/react-app/src/components/RatingBar.css
@@ -1,11 +1,13 @@
 .rating-bar {
-    width: 100%;
+    width: 90%;
     height: 20px;
     background-color: #e0e0e0;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .rating-bar-fill {
